Adding the new error file with error message
