# internal/delivery/http/v1/auth.go
@@ -13,9 +13,40 @@ import (
 func (h *Handler) initAuthRoutes(api *gin.RouterGroup) {
 	courses := api.Group("/auth")
 	{
-		courses.POST("/login", h.userLogin)
 		courses.POST("/signup", h.signupNewUser)
+		courses.POST("/login", h.userLogin)
 	}
+}
+
+// @Summary New user signup
+// @Tags Authentication
+// @Description Creates new user with the given detials
+// @ModuleID signupNewUser
+// @Accept  json
+// @Produce  json
+// @Param input body service.SignupUserInput true "sign up info"
+// @Success 200 {object} service.LoginInput
+// @Failure 400,500 {object} utils.Response
+// @Router /auth/signup [Post]
+func (h *Handler) signupNewUser(ctx *gin.Context) {
+	var input service.SignupUserInput
+	if err := ctx.BindJSON(&input); err != nil {
+		utils.ErrorResponseString(ctx, http.StatusBadRequest, "invalid input body")
+		return
+	}
+	err := h.services.Users.Signup(ctx.Request.Context(), &input)
+
+	if err != nil {
+		// TODO: discriminate between validation errors, logic errors and internal server errors
+		if err == repository.ErrNotFound {
+			utils.ErrorResponse(ctx, http.StatusNotFound, err)
+			return
+		}
+		utils.ErrorResponse(ctx, http.StatusInternalServerError, err)
+		return
+	}
+
+	ctx.Status(http.StatusOK)
 }
 
 // @Summary Authenticate user credentials
@@ -24,6 +55,7 @@ func (h *Handler) initAuthRoutes(api *gin.RouterGroup) {
 // @ModuleID userLogin
 // @Accept  json
 // @Produce  json
+// @Param input body service.LoginInput true "sign up info"
 // @Success 200 {object} service.LoginInput
 // @Failure 400,500 {object} utils.Response
 // @Router /auth/login [Post]
@@ -57,34 +89,4 @@ func (h *Handler) userLogin(ctx *gin.Context) {
 		ExpiresIn:   0,
 	}
 	ctx.JSON(http.StatusOK, output)
-}
-
-// @Summary New user signup
-// @Tags Authentication
-// @Description Creates new user with the given detials
-// @ModuleID signupNewUser
-// @Accept  json
-// @Produce  json
-// @Success 200 {object} service.LoginInput
-// @Failure 400,500 {object} utils.Response
-// @Router /auth/signup [Post]
-func (h *Handler) signupNewUser(ctx *gin.Context) {
-	var input service.SignupUserInput
-	if err := ctx.BindJSON(&input); err != nil {
-		utils.ErrorResponseString(ctx, http.StatusBadRequest, "invalid input body")
-		return
-	}
-	err := h.services.Users.Signup(ctx.Request.Context(), &input)
-
-	if err != nil {
-		// TODO: discriminate between validation errors, logic errors and internal server errors
-		if err == repository.ErrNotFound {
-			utils.ErrorResponse(ctx, http.StatusNotFound, err)
-			return
-		}
-		utils.ErrorResponse(ctx, http.StatusInternalServerError, err)
-		return
-	}
-
-	ctx.Status(http.StatusOK)
 }
